public folder updated

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lifecycle GUI</title>
+    <title>LM-UM GUI</title>
 
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/atos_icon.ico" />
@@ -10,12 +10,12 @@
     <meta name="description" content="GUI">
     <meta name="author" content="ATOS">
 
-    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/vis-network.min.js"></script>
+    <script type="text/javascript" src="vendor/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="vendor/js/vis-network.min.js"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="/js/vis-network.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
+    <link href="vendor/js/vis-network.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="vendor/css/font-awesome.min.css">
     <style type="text/css">
       #mynetwork {
         margin-top: -10px;
