--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,24 @@
     <title>LM-UM GUI</title>
 
     <meta charset="utf-8" />
+    <script type='text/javascript'>
+        window.API_URL = 'UM_LM_API_URL';
+    </script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/atos_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="GUI">
     <meta name="author" content="ATOS">
 
+    <!-- js -->
+
     <script type="text/javascript" src="vendor/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="vendor/js/vis-network.min.js"></script>
+
     <!-- css -->
-    <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
-    <link href="vendor/js/vis-network.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="vendor/css/font-awesome.min.css">
+    <link rel="stylesheet" href="vendor/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="vendor/js/vis-network.min.css" type="text/css"/>
+    <link rel="stylesheet" href="vendor/css/font-awesome.min.css" type="text/css"/>
     <style type="text/css">
       #mynetwork {
         margin-top: -10px;
